Got face recognition working on static images

--- a/face-app/src/app/app.component.html
+++ b/face-app/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-face-matcher></app-face-matcher>
+<!-- <div class='row'>
+    <div class='col-xs-12'>
+        <app-face-matcher></app-face-matcher>
+    </div>
+    <div class='col-xs-12'>
+        <app-image-face-matcher></app-image-face-matcher>
+    </div>
+</div> -->
+<app-image-face-matcher></app-image-face-matcher>
