Updated code with styling and spinners

--- a/face-app/src/app/app.component.html
+++ b/face-app/src/app/app.component.html
@@ -6,4 +6,14 @@
         <app-image-face-matcher></app-image-face-matcher>
     </div>
 </div> -->
-<app-image-face-matcher></app-image-face-matcher>
+<!-- <app-face-matcher></app-face-matcher> -->
+<!-- <app-image-face-matcher></app-image-face-matcher> -->
+<div class="container">
+    <div class='row'>
+        <div class='col-xs-12'>
+            <h1>FaceApp</h1>
+            <app-webcam-image-matcher></app-webcam-image-matcher>
+        </div>
+    </div>
+</div>
+<!-- <app-image-face-matcher></app-image-face-matcher> -->
