--- a/face-app/src/app/webcam-image-matcher/webcam-image-matcher.component.scss
+++ b/face-app/src/app/webcam-image-matcher/webcam-image-matcher.component.scss
@@ -1,3 +1,5 @@
+$max-mobile-width: '767px';
+
 #loading {
     position: absolute;
     left: 50%;
@@ -31,4 +33,34 @@
     position: relative;
     display: inline-block;
     margin-left: 1em;
+}
+
+.float-right {
+    float: right;
+    text-align: right;
+    .alert-danger {
+        text-align: left;
+    }
+}
+
+.float-left {
+    float: left;
+}
+
+.success {
+    color: limegreen;
+}
+
+.failure {
+    color: red;
+}
+
+@media screen and (max-width: $max-mobile-width) {
+    .float-right, .float-left {
+        float: none;
+        text-align: center;
+    }
+    .btn {
+        width: 100%;
+    }
 }
